# compiler-course-hw

./: CMakeLists.txt  document.tex  parse.cpp  parse.h  readme.md  report.md  simplelex.cpp  simplelex.h
doc/: document.tex
lex/: CMakeLists.txt  readme.md
lex/doc/: document.tex
lex/src/: CMakeLists.txt  simplelex.h  trie.cpp
lex/test/: CMakeLists.txt  tester.cpp
lex/test/test_data/: macro.c
lib/: trie.h
parser/: LL1.cpp  LL1.h  LR1.cpp  LR1.h  Parser.cpp  Parser.h  Rule.cpp  Rule.h  SLR1.cpp  SLR1.h  Symbol.cpp  Symbol.h  main.cpp  parser.sln
src/: CMakeLists.txt  keyword.txt  simplelex.cpp  simplelex.h  trie.cpp  trie.h
test/: CMakeLists.txt  literial.cpp  numeric.c  test_numeric.cpp
test/test_data/: error.c  literal.c  operator.c  other.c
test_data/: damnit.c  literal.c  macro.c  numeric.c  operator.c
